simplified feedback code to make it reusable on wall page

--- a/app/templates/comms/search-filter-bar.html
+++ b/app/templates/comms/search-filter-bar.html
@@ -10,28 +10,28 @@
        </div>
     <div class="field is-grouped">
     	<p class="control">
-    <button class="button transition fb-search-b {% if by == 'hot' %}is-danger is-light{% endif %}" data-on="is-danger is-light" data-name="hot" {% if by == 'hot' %}data-active="true"{% else %}data-active="false"{% endif %}>
+    <button class="button transition search-filter-bar-b {% if by == 'hot' %}is-danger is-light{% endif %}" data-on="is-danger is-light" data-name="hot" {% if by == 'hot' %}data-active="true"{% else %}data-active="false"{% endif %}>
       <span id="cog" class="icon">
         <i class="fas fa-fire-alt"></i>
       </span>
     </button>
   </p>
   <p class="control">
-    <button class="button transition fb-search-b {% if by == 'best' %}is-warning is-light{% endif %}" data-on="is-warning is-light" data-name="best" {% if by == 'best' %}data-active="true"{% else %}data-active="false"{% endif %}>
+    <button class="button transition search-filter-bar-b {% if by == 'best' %}is-warning is-light{% endif %}" data-on="is-warning is-light" data-name="best" {% if by == 'best' %}data-active="true"{% else %}data-active="false"{% endif %}>
       <span id="cog" class="icon">
         <i class="fas fa-medal"></i>
       </span>
     </button>
   </p>
   <p class="control">
-    <button class="button transition fb-search-b {% if by == 'new' %}is-success is-light{% endif %}" data-on="is-success is-light" data-name="new" {% if by == 'new' %}data-active="true"{% else %}data-active="false"{% endif %}>
+    <button class="button transition search-filter-bar-b {% if by == 'new' %}is-success is-light{% endif %}" data-on="is-success is-light" data-name="new" {% if by == 'new' %}data-active="true"{% else %}data-active="false"{% endif %}>
       <span id="cog" class="icon">
         <i class="fas fa-seedling"></i>
       </span>
     </button>
   </p>
   <p class="control">
-    <button class="button transition fb-search-b {% if by == 'top' %}is-link is-light{% endif %}" data-on="is-link is-light" data-name="top" {% if by == 'top' %}data-active="true"{% else %}data-active="false"{% endif %}>
+    <button class="button transition search-filter-bar-b {% if by == 'top' %}is-link is-light{% endif %}" data-on="is-link is-light" data-name="top" {% if by == 'top' %}data-active="true"{% else %}data-active="false"{% endif %}>
       <span id="cog" class="icon">
         <i class="fas fa-rocket"></i>
       </span>
