--- a/app/templates/comms/feedback/feedback.html
+++ b/app/templates/comms/feedback/feedback.html
@@ -30,6 +30,7 @@
 
 {% endblock %}
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/comms/search-filter-bar.js') }}"></script>
 <script type="text/javascript">
 	if (!window.history.state) {
 		{% if post %}
@@ -43,52 +44,10 @@
 		window.location.href = "/feedback/submit/";
 	});
 
-	function clearSearchBy() {
-		$(".fb-search-b").each(function() {
-			var $this = $(this);
-			$this.attr('data-active', "false");
-				$this.removeClass($this.data('on'));
-		})
-	}
-
-	function changeSearchBy(by) {
-		$(".fb-search-b").each(function() {
-			var $this = $(this);
-		if ($this.data('name') != by) {
-			$this.attr('data-active', "false");
-				$this.removeClass($this.data('on'));
-	}});
-}
-
-	$(".fb-search-b").on('click', function() {
-		var $clicked = $(this);
-		var clicked	= this;
-		$(".fb-search-b").each(function() {
-			var $this = $(this);
-			if (this != clicked) {
-			$this.attr('data-active', "false");
-				$this.removeClass($this.data('on'));
-			}
-		});
-		
-		console.log($clicked.attr('data-active'));
-		if ($clicked.attr('data-active') == "true") {
-			/*
-					$clicked.attr('data-active', "false");
-					$clicked.removeClass($clicked.data('on'));
-					console.log("DDED");
-			*/
-		}
-		else {
-			console.log("ADASASD");
-		$clicked.attr('data-active', "true");
-		$clicked.addClass($clicked.data('on'));
-		searchFeedback();
-
-	}
-
-
-	});
+	$(".search-filter-bar-b").on('click', function() {
+				searchFeedback();
+});
+	
 
 	$('#fb-container').on('click', '.vote', function() {
 		console.log("WOOP");
@@ -329,7 +288,7 @@ function changeTo() {
   if (state.is_search == true) {
 	  $('#search-bar-input').val(simplify(state.search));
 	  changeSearchBy(state.by);
-	  var $b = $('.fb-search-b[data-name="'+state.by+'"]');
+	  var $b = $('.search-filter-bar-b[data-name="'+state.by+'"]');
 	  $b.attr('data-active', "true");
 		$b.addClass($b.data('on'));
 	  searchFeedback(state.search, state.by, state.page, do_redirect=false);
@@ -344,24 +303,9 @@ function clearPage() {
 	$("#fb-container").empty();
 }
 
-function simplify(value) {
-	if (value == undefined) {
-		return "";
-	}
-	return value;
-}
-
 function displayLoading() {
 	clearPage();
 	$("#fb-container").append(infoLoader());
-}
-
-function getSearch() {
-	return $('#search-bar-input').val();
-}
-
-function getBy() {
-	return simplify($('.fb-search-b[data-active="true"]').data('name'));
 }
 
 function searchFeedback(search=getSearch(),by=getBy(),page=1,do_redirect=true) {
