--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -123,7 +123,7 @@ margin-top: 200px;
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(/static/images/loader-one.gif) center no-repeat #ffff;
+	background: #ffff;
 	background-size: 75%;
 }
 
