wall submit on page front end

--- a/app/templates/comms/feedback/feedback.html
+++ b/app/templates/comms/feedback/feedback.html
@@ -44,7 +44,7 @@
 		window.location.href = "/feedback/submit/";
 	});
 
-	$(".search-filter-bar-b").on('click', function() {
+	$(".search-filter-bar-b[data-active='false']").on('click', function() {
 				searchFeedback();
 });
 	
