--- a/app/templates/profiles/add-roles.html
+++ b/app/templates/profiles/add-roles.html
@@ -8,7 +8,7 @@
             </span>
           </a>
           <p class="modal-card-title" id="header">Add Roles</p>
-          <button class="button is-info is-normal is-rounded" id="send-invites-button">
+          <button class="button is-info is-normal is-rounded" id="role-save-button">
             <span>Save changes</span>
           </button>
       </header>
@@ -17,7 +17,7 @@
         <div>
             <h1><b style="margin-bottom: 3px; font-size: 20px;">Create Roles</b></h1>
             <div class="control has-icons-left has-icons-right">
-                <input class="input is-normal" type="text" placeholder="Role Name">
+                <input class="input is-normal" type="text" placeholder="Role Name" id="name">
                 <span class="icon is-small is-left">
                   <i class="fas fa-user"></i>
                 </span>
@@ -25,6 +25,16 @@
                   <i class="fas fa-check"></i>
                 </span>
             </div>
+
+            <!--
+            <select id="list" onchange="getSelectedValue();">
+              {% for member in club.group.member %}
+                {% if member_has_role(self, member, NULL) %}
+                  <option value="{{member}}">{{member.username}}</option> 
+                {% endif %}
+              {% endfor %}
+            </select>-->
+            
             <br>
             <div class="buttons-top">
                 <div class="button-square">
@@ -70,7 +80,7 @@
             <div class="buttons-down">
 
               <div class="button-square">
-                <input class="card__input" type="checkbox"/>
+                <input class="card__input" type="checkbox" id="changeRole"/>
                 <div class="icon-box">
                   <span class="icon is-small">
                     <i class="fas fa-users-cog"></i>
@@ -80,7 +90,7 @@
               </div>
 
               <div class="button-square">
-                <input class="card__input" type="checkbox"/>
+                <input class="card__input" type="checkbox" id="edit"/>
                 <div class="icon-box">
                   <span class="icon is-small">
                     <i class="fas fa-edit"></i>
@@ -90,7 +100,7 @@
               </div>
 
               <div class="button-square">
-                <input class="card__input" type="checkbox"/>
+                <input class="card__input" type="checkbox" id="privatePost"/>
                 <div class="icon-box">
                   <span class="icon is-small">
                     <i class="fas fa-lock"></i>
@@ -100,7 +110,7 @@
               </div>
                 
               <div class="button-square">
-                <input class="card__input" type="checkbox"/>
+                <input class="card__input" type="checkbox" id="publicPost" />
                 <div class="icon-box">
                   <span class="icon is-small">
                     <i class="fas fa-globe"></i>
