--- a/app/templates/comms/wall/flex-stream.html
+++ b/app/templates/comms/wall/flex-stream.html
@@ -1,6 +1,7 @@
 <div style="margin-top: 10px;" id="flex-stream">
 	{% if posts %}
 	{% for post in posts %}
+		{% include ' '}
 	{% endfor %}
 	{% endif %}
 </div>
