--- a/app/templates/profiles/club/profile.html
+++ b/app/templates/profiles/club/profile.html
@@ -131,6 +131,8 @@
           {% endif %}
         </div>
     </div>
+    {% else %}
+      <h3 id="private"><img src="../../../static/images/padlockClose.png"/> This is a private club</h3>
     {% endif %}
   </div>
 </div>
