--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -108,7 +108,7 @@
     <li data-content="#profile-projects">
       <a>
         <span class="icon is-small"><i class="fas fa-pencil-alt" aria-hidden="true"></i></span>
-        <span class="tabtext">Projects</span>
+        <span class="tabtext">Ideas</span>
       </a>
     </li>
   </ul>
