--- a/app/templates/comms/news/feed.html
+++ b/app/templates/comms/news/feed.html
@@ -33,6 +33,22 @@ function changeToFeed() {
 </script>
 <style type="text/css">
 
+  .identity {
+      color: rgba(0, 0, 0, 0.5);
+      transition: 0.3s;
+  }
+
+  .identity:hover {
+    color: rgba(0, 0, 0, 0.65);
+  }
+
+  .author:hover, .organisation:hover {
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+  }
+
+
+
   .level-item {
     transition: 0.1s;
   }
@@ -46,7 +62,7 @@ function changeToFeed() {
   }
 
   .medium-reply:hover {
-    color: hsl(217, 71%, 53%);
+    color: hsl(217, 80%, 60%);
   }
 
   .medium-quote:hover {
