--- a/app/templates/profiles/project/create.html
+++ b/app/templates/profiles/project/create.html
@@ -7,7 +7,7 @@
           <i class="fa fa-times"></i>
         </span>
       </a>
-      <p class="modal-card-title" id="header">Create Club</p>
+      <p class="modal-card-title" id="header">Create Idea</p>
       <button class="button is-info is-normal is-rounded" id="create-project">
         <span>Save</span>
       </button>
@@ -32,7 +32,7 @@
           <a class="button is-static">£</a>
           </p>
           <p class="control" style="width:100%;">
-          <input class="input has-fixed-size" placeholder="Add your Project's handle" id="handle-field"></input>
+          <input class="input has-fixed-size" placeholder="Add the handle of your idea" id="handle-field"></input>
           </p>
         </div>
     </div>
@@ -42,7 +42,7 @@
       <br id="handle-anchor">
     <div id="name">
       <h1><b>Name</b></h1>
-      <input class="input has-fixed-size" placeholder="Add your Project's name" id="name-field"></input>
+      <input class="input has-fixed-size" placeholder="Add the name of your idea" id="name-field"></input>
     </div>
       <div id="feedback-name" class="feedback">
         <div class="message"></div>
@@ -50,7 +50,7 @@
       <br id="name-anchor">
     <div id="description">
       <h1><b>Description</b></h1>
-      <textarea class="textarea has-fixed-size" placeholder="Add your Project's description" id="description-field" rows="3" maxlength="160"></textarea>
+      <textarea class="textarea has-fixed-size" placeholder="Add the description of your idea" id="description-field" rows="3" maxlength="160"></textarea>
     </div>
       <div id="feedback-description" class="feedback">
         <div class="message"></div>
@@ -79,7 +79,7 @@
     <div id="location-settings">
       <div id="location">
         <h1><b>Location</b></h1>
-        <input class="input has-fixed-size" placeholder="Add your Project's location" id="location-field" rows="2"></input>
+        <input class="input has-fixed-size" placeholder="Add the location of your idea" id="location-field" rows="2"></input>
         <div id="map">
         </div>
       </div>
