--- a/app/templates/profiles/project/edit.html
+++ b/app/templates/profiles/project/edit.html
@@ -7,7 +7,7 @@
           <i class="fa fa-times"></i>
         </span>
       </a>
-      <p class="modal-card-title" id="header">Edit Project</p>
+      <p class="modal-card-title" id="header">Edit Idea</p>
       <button class="button is-info is-normal is-rounded" id="save-button">
         <span>Save</span>
       </button>
