--- a/app/templates/comms/news/medium2.html
+++ b/app/templates/comms/news/medium2.html
@@ -1,4 +1,4 @@
-<article class="media" style="color:  black;">
+<article class="media" style="color:  black;" data-id="{{medium.id}}">
   <div class="media-left">
     <figure class="image is-64x64" style="width:40px;height: 40px; float: left; margin-right: 5px;">
         <a class="medium-image" {% if not without_link %}href="{% if medium %}{{medium.href}}{% else %}\\href//{% endif %}"{% endif %}>
