--- a/app/templates/wall/wall.html
+++ b/app/templates/wall/wall.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 10px;" id="flex-stream">
+<div style="margin-top: 10px;" id="wall">
 	{% if media %}
 	{% for medium in media %}
 		{% with is_liked=medium.is_liked %}
