--- a/app/templates/comms/wall/flex-stream.html
+++ b/app/templates/comms/wall/flex-stream.html
@@ -1,7 +1,11 @@
-<div style="margin-top: 10px;" id="flex-stream">
-	{% if posts %}
-	{% for post in posts %}
-		{% include ' '}
+<div style="margin-top: 10px;" class="wall">
+	{% if media %}
+	{% for medium in media %}
+		{% with is_liked=medium.is_liked %}
+		<div class="container floater">
+		{% include 'comms/wall/medium2.html' %}
+		</div>
+		{% endwith %}
 	{% endfor %}
 	{% endif %}
 </div>
