--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -92,7 +92,7 @@
   {% endif %}
 
 {% include "profiles/user/tabs/tabs.html" %}
-{% include 'profiles/wall.html' %}
+{% include 'comms/wall/wall-bit.html' %}
 {% endblock %}
 
 {% block modal %}
