--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,12 +1,12 @@
 <section class="hero">
-  <footer class="footer" style="padding-bottom: 48px;">
+  <footer class="footer">
     <div class="container">
-      <div class="content has-text-centered" id="footer-content" style="background-color: rgba(255,255,255,0.25)">
+      <div class="content has-text-centered" id="footer-content">
         <p id="footer-text" style="color: black;">
-          <strong >CTW</strong> by Theo Lemle, Nicolaj Terndrup & Frederik Christoffersen
+          <strong >Counekt</strong> by Frederik W. L. Christoffersen
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
-          </span><b>2020</b>
+          </span><b>2021</b>
         </p>
         <p>
           <a class="icon has-text-info" href="https://twitter.com/Frederik_W_L_C" target="_blank">
@@ -15,7 +15,7 @@
           <a class="icon has-text-info" href="https://github.com/FrederikWLC/ctw" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a class="icon has-text-info" href="mailto:frederik.w.l.christoffersen@gmail.com" target="_blank">
+          <a class="icon has-text-info" href="mailto:frederik.w.l.christoffersen@counekt.com" target="_blank">
             <i class="fa fa-envelope"></i>
           </a>
         </p>
