--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -3,7 +3,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="/" style="white-space: nowrap;">
         <span class="icon" style="display: inline-block;"><i class="fas fa-mountain" aria-hidden="true"></i></span>
-        <h6 href="/" class="subtitle" style="display: inline-block;"><strong>CTW</strong></h6>
+        <h6 href="/" class="subtitle" style="display: inline-block;"><strong>Counekt</strong></h6>
       </a>
     </div>
     <div id="navbar-menu-id" class="navbar-menu">
