--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -104,8 +104,8 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
-<link rel="stylesheet" href="/static/css/main.css">
-<script src="../static/js/main.js"></script>
+<link rel="stylesheet" href="/static/css/map.css">
+<script src="../static/js/map.js"></script>
 <script type="text/javascript">
   $(window).on("load", function () {
   explore(do_redirect=false);
