--- a/app/templates/auth/logout.html
+++ b/app/templates/auth/logout.html
@@ -7,7 +7,7 @@
 
 				<section class="modal-card-body has-text-centered">
 				<span class="icon is-large"><i class="fas fa-mountain fas fa-2x" aria-hidden="true"></i></span>
-				  <div class="title is-5 selectable">Log out of CTW?</div>
+				  <div class="title is-5 selectable">Log out of Counekt?</div>
 				  <div class="subtitle is-6 selectable">You can always log back in again later. If you just want to switch to a company account, you can do that by adding an existing company account.</div>
 				  <div id="buttons">
 					  <button class="button is-light is-normal is-rounded transition" id="cancel">
