--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -10,7 +10,7 @@
   	
     <div class="column" style="min-height: 100%;height: 100%; ">
       <p class="title is-1 is-spaced">
-        Entrepreneurial <br>infrastructure <br>for the internet
+        Entrepreneurial <br>infrastructure <br>for the internet.
       </p>
       <p class="subtitle">
         From real life recruitments to coffee meeting groups - this is a land of opportunities. Connect, create, and collaborate. Meet your future partners today. <b><a href="/register/">Join our platform now! <u>Sign up</u></a></b>
