--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -3,13 +3,12 @@
 <title>Counekt</title>
 {% endblock %}
 {% block content %}
-<section class="hero is-info is-fullheight" style="background-image:url('/static/images/alps-unfocus.jpg');   background-image: linear-gradient(to bottom right, navy,deepskyblue);
- background-size: cover;">
+<section class="hero is-info is-fullheight" style="background-image: linear-gradient(to bottom right, navy,deepskyblue);">
   <div class="hero-body">
   	<div class="columns" style="width:100%;">
   	
     <div class="column" style="min-height: 100%;height: 100%; ">
-      <p class="title is-1 is-spaced">
+      <p class="title is-1 is-spaced" style="min-width: 335px;">
         Entrepreneurial <br>infrastructure <br>for the internet.
       </p>
       <p class="subtitle">
@@ -140,12 +139,17 @@ setTimeout(function(){
 
 }
 
-body {
-
-}
-
 .leaflet-container{
     border-radius: 12px;
     }
+
+
+
+@media screen and (max-width: 380px) {
+
+  .title.is-1.is-spaced {
+    font-size: 230%;
+  }
+}
 </style>
 {% endblock %}
