even better front page

--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -8,7 +8,7 @@
   	<div id="first-thing" class="columns">
   	
     <div class="column" style="min-height: 100%;height: 100%; ">
-      <p class="title is-1 is-spaced" style="min-width: 344.5px;">
+      <p class="title is-1 is-spaced" style="min-width: 355.5px;">
         Entrepreneurial <br>infrastructure <br>for the internet.
       </p>
       <p class="subtitle">
@@ -20,7 +20,7 @@
 </div>
 </section>
 <section class="section is-medium">
-  <h1 class="title"><i>The</i> meeting place</h1>
+  <h1 class="title is-1"><i>The</i> meeting place</h1>
   <h2 class="subtitle">
     As a promising online meeting platform, <strong>Counekt</strong> seeks to provide <strong>entrepreneurs</strong> and likeminded with a <strong>flexible network</strong> as a tool to realise their <strong>ideas</strong> with. We are for the most a student <strong>startup</strong> comprised of just three friends. Two of us being from <strong>Copenhagen</strong>, Denmark and one being from <strong>Atlanta</strong>, United States - We are a <strong>global</strong> company. This is only the beginning of something <i>hopefully</i> great. 
   </h2>
@@ -149,17 +149,21 @@ setTimeout(function(){
 
 #first-thing.columns {
   margin: auto;
-  margin-top: 0px;
+  margin-top: 100px;
 }
 
 .title.is-1.is-spaced {
 font-size:  6vw !important;
 }
-@media screen and (max-width: 751.2px) {
+@media screen and (max-width: 768px) {
 
   .title.is-1.is-spaced {
-     font-size: 250% !important;
+     font-size: 46px !important;
   }
+
+  #first-thing.columns {
+  margin-top: 50px;
+}
 }
 
 @media screen and (min-width: 1200px) {
@@ -169,6 +173,8 @@ font-size:  6vw !important;
   div.columns {
     max-width:  1220px !important;
   }
+
+  
 
 }
 
