even better fp 2nd section

--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -20,8 +20,9 @@
 </div>
 </div>
 </section>
-<section class="section is-medium">
-  <h1 class="title is-1"><i>The</i> meeting place</h1>
+<section class="section hero">
+  <div class="hero-body" style="max-width: 1080px; margin: auto; padding:0px;">
+  <h1 class="title is-2"><i>The</i> meeting place</h1>
   <h2 class="subtitle">
     As a promising online meeting platform, <strong>Counekt</strong> seeks to provide <strong>entrepreneurs</strong> and likeminded with a <strong>flexible network</strong> as a tool to realise their <strong>ideas</strong> with. We are for the most a student <strong>startup</strong> comprised of just three friends. Two of us being from <strong>Copenhagen</strong>, Denmark and one being from <strong>Atlanta</strong>, United States - We are a <strong>global</strong> company. This is only the beginning of something <i>hopefully</i> great. 
   </h2>
@@ -104,6 +105,7 @@
   </div>
 </div>
   </div>
+</div>
 </div>
 </section>
 {% endblock %}
