spacing title section 2 fp

--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -22,7 +22,7 @@
 </section>
 <section class="section hero">
   <div class="hero-body" style="max-width: 1080px; margin: auto; padding:0px;">
-  <h1 class="title is-2"><i>The</i> meeting place</h1>
+  <h1 class="title is-2 is-spaced"><i>The</i> meeting place</h1>
   <h2 class="subtitle">
     As a promising online meeting platform, <strong>Counekt</strong> seeks to provide <strong>entrepreneurs</strong> and likeminded with a <strong>flexible network</strong> as a tool to realise their <strong>ideas</strong> with. We are for the most a student <strong>startup</strong> comprised of just three friends. Two of us being from <strong>Copenhagen</strong>, Denmark and one being from <strong>Atlanta</strong>, United States - We are a <strong>global</strong> company. This is only the beginning of something <i>hopefully</i> great. 
   </h2>
