--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -3,14 +3,13 @@
     <div class="container">
       <div class="content has-text-centered" id="footer-content">
         <p id="footer-text" style="color: black;">
-          <strong >Counekt</strong> by Frederik W. L. Christoffersen
           <span class="icon is-small">
-            <i class="fa fa-copyright"></i>
-          </span><b>2021</b>
+            <i class="far fa-copyright"></i>
+          </span> Counekt
         </p>
         <p>
-          <a class="icon has-text-info" href="https://twitter.com/Frederik_W_L_C" target="_blank">
-            <i class="fa fa-globe"></i>
+          <a class="icon has-text-info" href="https://twitter.com/counekt" target="_blank">
+            <i class="fa fa-twitter"></i>
           </a>          
           <a class="icon has-text-info" href="https://github.com/FrederikWLC/ctw" target="_blank">
             <i class="fa fa-github"></i>
