better profile (start of wall-bit)

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -19,9 +19,9 @@
 		            <div class='select'> 
 	        			<select id="gender"> 
 	          			<option selected>Unspecified</option>
-	          			<option>Male</option>
-	         			<option>Female</option>
-	          			<option>Other</option>
+	          			<option value="Male">Male</option>
+	         			<option value="Female">Female</option>
+	          			<option value="Other">Other</option>
 	      				</select>
 	    			</div>
 	    			<div id="feedback-gender" class="feedback help level-left">
