--- a/app/templates/profiles/club/profile.html
+++ b/app/templates/profiles/club/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="profile">
+<div id="profile" class="container">
   <div id="profile-top" class="floater container">
     <div id="profile-left">
       <div id="profile-image">
