--- a/app/static/css/profiles/profile.css
+++ b/app/static/css/profiles/profile.css
@@ -120,6 +120,12 @@ font-family: Universe, "Helvetica Neue",sans-serif;
 	transition: 0.3s;
 }
 
+#profile {
+	width: 100%;
+	max-width: 750px;
+	margin-top: auto;
+}
+
 #profile-top {
 	background-color: rgba(255,255,255,0.9);
 	padding: 10px;
