--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="profile">
+<div id="profile" class="container">
   <div id="profile-top" class="floater container">
     <div id="profile-left">
       <div id="profile-image">
@@ -92,7 +92,9 @@
   {% endif %}
 
 {% include "profiles/user/tabs/tabs.html" %}
+{% with vanish=True, create_bar = user == current_user %}
 {% include 'comms/wall/wall-bit.html' %}
+{% endwith %}
 {% endblock %}
 
 {% block modal %}
